@@ -5,8 +5,6 @@
  *
  *  $Id$
  *
- *  @brief 
- *
  *  @author Carlos O'Ryan
  */
 //=============================================================================
